sdk/csharp/src/Verdandi/Internal/NativeMethods.cs


    /// <summary>读取借用候选数量。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidates_size")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nuint CandidatesSize(nint value);

    /// <summary>读取一个借用候选的元数据。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidates_metadata")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CandidatesMetadata(nint value, nuint index, NativeRegistrationMetadata* output);

    /// <summary>遍历一个借用候选的 Attr。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidates_visit_attr")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CandidatesVisitAttr(
        nint value,
        nuint index,
        delegate* unmanaged[Cdecl]<nint, NativeStringView, NativeBytesView, int> visitor,
        nint context,
        NativeError* error);

    /// <summary>遍历一个借用候选当前预测优先的 Data。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidates_visit_data")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CandidatesVisitData(
        nint value,
        nuint index,
        delegate* unmanaged[Cdecl]<nint, NativeStringView, NativeBytesView, int> visitor,
        nint context,
        NativeError* error);

    /// <summary>在当前 Selector 事务内暂存完整 Data。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidates_mutate")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CandidatesMutate(nint value, nuint index, NativeFieldsView data, NativeError* error);

    /// <summary>把一个索引加入当前事务选择结果。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selection_add")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectionAdd(nint value, nuint index, NativeError* error);

    /// <summary>同步执行 One 策略。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_one")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorOne(
        SelectorHandle value,
        delegate* unmanaged[Cdecl]<nint, nint, nint, NativeError*, int> policy,
        nint context,
        nint* output,
        NativeError* error);

    /// <summary>同步执行 Any 策略。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_any")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorAny(
        SelectorHandle value,
        delegate* unmanaged[Cdecl]<nint, nint, nint, NativeError*, int> policy,
        nint context,
        nint* output,
        NativeError* error);

    /// <summary>读取脱离候选列表数量。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidate_list_size")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nuint CandidateListSize(CandidateListHandle value);

    /// <summary>读取脱离候选元数据。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidate_list_metadata")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CandidateListMetadata(CandidateListHandle value, nuint index, NativeRegistrationMetadata* output);

    /// <summary>遍历脱离候选 Attr。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidate_list_visit_attr")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CandidateListVisitAttr(
        CandidateListHandle value,
        nuint index,
        delegate* unmanaged[Cdecl]<nint, NativeStringView, NativeBytesView, int> visitor,
        nint context,
        NativeError* error);

    /// <summary>遍历脱离候选 Data。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidate_list_visit_data")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CandidateListVisitData(
        CandidateListHandle value,
        nuint index,
        delegate* unmanaged[Cdecl]<nint, NativeStringView, NativeBytesView, int> visitor,
        nint context,
        NativeError* error);

    /// <summary>释放脱离候选列表；仅由 SafeHandle 调用。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_candidate_list_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CandidateListRelease(nint value);

    /// <summary>创建完整脱离 Selector 快照。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorSnapshotCreate(SelectorHandle value, nint* output, NativeError* error);

    /// <summary>读取 Selector 快照 generation。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_generation")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ulong SelectorSnapshotGeneration(SelectorSnapshotHandle value);

    /// <summary>读取 Selector 快照同步状态。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_is_synchronized")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorSnapshotIsSynchronized(SelectorSnapshotHandle value);

    /// <summary>读取活动或 retained 快照数量。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_size")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nuint SelectorSnapshotSize(SelectorSnapshotHandle value, int retained);

    /// <summary>读取活动或 retained 快照元数据。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_metadata")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorSnapshotMetadata(
        SelectorSnapshotHandle value,
        int retained,
        nuint index,
        NativeRegistrationMetadata* output);

    /// <summary>读取 retained 候选截止 Redis 毫秒。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_retained_until")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ulong SelectorSnapshotRetainedUntil(SelectorSnapshotHandle value, nuint index);

    /// <summary>遍历活动或 retained 快照 Attr。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_visit_attr")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorSnapshotVisitAttr(
        SelectorSnapshotHandle value,
        int retained,
        nuint index,
        delegate* unmanaged[Cdecl]<nint, NativeStringView, NativeBytesView, int> visitor,
        nint context,
        NativeError* error);

    /// <summary>遍历活动或 retained 快照 Data。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_visit_data")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorSnapshotVisitData(
        SelectorSnapshotHandle value,
        int retained,
        nuint index,
        delegate* unmanaged[Cdecl]<nint, NativeStringView, NativeBytesView, int> visitor,
        nint context,
        NativeError* error);

    /// <summary>释放 Selector 快照；仅由 SafeHandle 调用。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_snapshot_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SelectorSnapshotRelease(nint value);

    /// <summary>非阻塞读取 Selector 异步诊断。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_try_error")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorTryError(SelectorHandle value, int* available, NativeError* error);

    /// <summary>关闭 Selector。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_close")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SelectorClose(SelectorHandle value, NativeError* error);

    /// <summary>释放 Selector；仅由 SafeHandle 调用。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_selector_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SelectorRelease(nint value);

    /// <summary>打开 Catalog 子域。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_client_open")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogClientOpen(ClientHandle root, nint* output, NativeError* error);

    /// <summary>读取 Catalog Client 是否开放。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_client_is_open")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogClientIsOpen(CatalogClientHandle value);

    /// <summary>关闭 Catalog 子域。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_client_close")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogClientClose(CatalogClientHandle value, NativeError* error);

    /// <summary>释放 Catalog Client；仅由 SafeHandle 调用。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_client_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CatalogClientRelease(nint value);

    /// <summary>创建无任务 Catalog Publisher。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_publisher_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogPublisherCreate(CatalogClientHandle client, nint* output, NativeError* error);

    /// <summary>释放 Catalog Publisher；仅由 SafeHandle 调用。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_publisher_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CatalogPublisherRelease(nint value);

    /// <summary>原子覆盖完整 Catalog 记录。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_replace")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogReplace(
        CatalogPublisherHandle publisher,
        NativeCatalogPathView path,
        NativeStringView kind,
        NativeFieldsView fields,
        ulong* revision,
        NativeError* error);

    /// <summary>按精确 base revision 原子 Patch Catalog 字段。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_patch")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogPatch(
        CatalogPublisherHandle publisher,
        NativeCatalogPathView path,
        ulong baseRevision,
        NativeFieldsView fields,
        ulong* revision,
        NativeError* error);

    /// <summary>原子删除完整 Catalog Path。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_erase")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogErase(CatalogPublisherHandle publisher, NativeCatalogPathView path, ulong* revision, NativeError* error);

    /// <summary>创建并完成 Catalog Subscriber 初始同步。</summary>
    [LibraryImport(LibraryName, EntryPoint = "verdandi_catalog_subscriber_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CatalogSubscriberCreate(
        CatalogClientHandle client,
        NativeCatalogSubscription* subscription,
        nint* output,
        NativeError* error);
